# GameOfLife

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/: constants.h  entity.h  globals.h  maze.h  states.h  utils.h
include/classes/: CellBox.h  Chromosome.h  Entity.h  Game.h
include/components/: ControlPanel.h  CounterText.h  Entity.h  Maze.h  MazeCellToolTip.h
include/drawables/: CounterText.h  Entity.h  Maze.h
include/imgui/: ControlPanel.h
include/interfaces/: IGameComponent.h  IGameImGuiComponent.h  IRenderable.h
src/: CMakeLists.txt  constants.cpp  globals.cpp  main.cpp  states.cpp  utils.cpp
src/classes/: CellBox.cpp  Chromosome.cpp  Entity.cpp  Game.cpp  entity.cpp  maze.cpp
src/components/: ControlPanel.cpp  CounterText.cpp  Entity.cpp  Maze.cpp  MazeCellToolTip.cpp
src/drawables/: CounterText.cpp  Entity.cpp  Maze.cpp
src/imgui/: ControlPanel.cpp
