target_sources(${PROJECT_NAME}
        PUBLIC
        constants.cpp
        states.cpp
        utils.cpp
        main.cpp
        classes/Chromosome.cpp
        classes/Game.cpp
        components/CounterText.cpp
        components/Entity.cpp
        components/Maze.cpp
        components/ControlPanel.cpp
        components/MazeCellToolTip.cpp
)

# add_subdirectory(subdir)
